# shenrengongju

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: 01-需求规格说明书提纲.md  02-架构图草案与模块接口定义.md  03-术语与数据模型草案.md  04-详细版SRS.md  05-配置文件Schema草案.md  06-时序图与类图.md  07-开发评估与SimPy集成.md  08-综合架构设计.md  09-概要设计.md  10-详细设计说明书.md  11-实施现状问题与Sprint规划.md  12-docx基线实施审查报告-2026-02-18.md  13-Phase实施与回归记录.md  14-docx需求追踪矩阵.md  15-研究闭环验收基线.md  16-研究口径Issue拆解与排期.md  17-双基线综合审查报告-2026-02-23.md  18-综合审查报告-2026-02-24.md  19-用户使用说明书.md  20-审查问题台账.csv  21-全量基线一致性校验记录-2026-02-24.md  22-全量深审执行报告-2026-02-24.md  22-分阶段验收报告.md  23-uml-fullstack.md  24-高标准论文图件规划-混合模式.md  25-设计方案报告全量追踪矩阵.md  26-严格Docx验收矩阵.md  26-交付清单.md  26-测试报告.md  26-测试细则.md  26-用户培训记录.md  26-用户维护及使用手册.md  26-研制总结报告.md  26-需求分析报告.md  27-research_v2治理评估.md  AGENTS.md  README.md
examples/: at01_single_dag_single_core.yaml  at02_resource_mutex.yaml  at03_resource_binding.yaml  at04_deadline_miss.yaml  at05_preempt.yaml  at06_time_deterministic.yaml  at07_heterogeneous_multicore.yaml  at08_migration.yaml  at09_table_based_etm.yaml  at10_arrival_process.yaml  batch_matrix.yaml  research_arrival_burst_sequence.yaml  research_arrival_envelope.yaml  research_arrival_periodic_jitter.yaml  research_counterexamples.json
review/: 00-Docx条款主索引.md  01-Docx条款追踪矩阵.md  02-审查总报告.md  03-问题台账.csv  04-两迭代收口路线图.md  05-I1口径冻结与CI门禁说明.md  06-收口执行记录.md  AGENTS.md
rtos_sim/: __init__.py  api.py
scripts/: benchmark_sched_rate.py  check_doc_baseline_consistency.py  check_doc_reference_integrity.py  perf_baseline.py  perf_compare.py  perf_delta.py  (+3 more)
(+224 files in other folders)
